# Minesweeper

./: .gitignore  CMakeLists.txt  README.md
.ccls-cache/@@Users@JJ@Documents@GitHub@Minesweeper/: @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@Availability.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@AvailabilityInternal.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@AvailabilityInternalLegacy.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@AvailabilityVersions.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@__wctype.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@_ctermid.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@_ctype.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@_locale.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@_stdio.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@_types.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@_types@_intmax_t.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@_types@_nl_item.h.blob  @Library@Developer@CommandLineTools@SDKs@MacOSX14.4.sdk@usr@include@_types@_uint16_t.h.blob  (+952 more)
.ccls-cache/@Users@JJ@Documents@GitHub@Minesweeper/: include@display.hpp.blob  (+38 more)
dependencies/: CMakeLists.txt
include/: display.hpp
src/: CMakeLists.txt  app  app.cpp  display.cpp  game_data.cpp  minesweeper.hpp  parameters.hpp
